implement property modification lifecycle