@@ -2,7 +2,6 @@ package com.null_codes.hearth.service;
 
 import com.null_codes.hearth.model.Property;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -14,7 +13,7 @@ public class PropertyManager {
   private final List<Property> properties = new ArrayList<>();
 
   public void register(Property property) {
-    Objects.requireNonNull(property, "property");
+    Objects.requireNonNull(property, "property cannot be null");
 
     if (get(property.uuid()).isPresent()) {
       throw new IllegalArgumentException(
@@ -24,20 +23,41 @@ public class PropertyManager {
     properties.add(property);
   }
 
+  public void update(Property property) {
+    Objects.requireNonNull(property, "property cannot be null");
+
+    for (int index = 0; index < properties.size(); index++) {
+      Property existing = properties.get(index);
+      if (!existing.uuid().equals(property.uuid())) continue;
+      if (existing.timestamp() != property.timestamp()) {
+        throw new IllegalArgumentException("A property's creation timestamp cannot be changed.");
+      }
+
+      properties.set(index, property);
+      return;
+    }
+
+    throw new IllegalArgumentException(
+        "No property with UUID " + property.uuid() + " is registered.");
+  }
+
   public Optional<Property> get(UUID uuid) {
+    Objects.requireNonNull(uuid, "uuid cannot be null");
     return properties.stream().filter(property -> property.uuid().equals(uuid)).findFirst();
   }
 
   public List<Property> getProperties() {
-    return Collections.unmodifiableList(this.properties);
+    return List.copyOf(properties);
   }
 
-  public void remove(Property property) {
-    this.properties.remove(property);
+  public boolean remove(Property property) {
+    Objects.requireNonNull(property, "property cannot be null");
+    return properties.remove(property);
   }
 
-  public void remove(UUID uuid) {
-    get(uuid).ifPresent(this.properties::remove);
+  public boolean remove(UUID uuid) {
+    Objects.requireNonNull(uuid, "uuid cannot be null");
+    return properties.removeIf(property -> property.uuid().equals(uuid));
   }
 
   public Optional<Property> findProperty(Location location) {
